# vld-cmake

./: CMakeLists.txt  README.md
cppformat/: CMakeLists.txt
dbghelp/: CMakeLists.txt
test/: main.cpp
vld/: CMakeLists.txt  callstack.cpp  utility.cpp  vld.cpp  vld.ini  vld_def.h  vldint.h
